add comments and bucket details

--- a/ExampleProject/Views/Example/listAllBuckets.cshtml
+++ b/ExampleProject/Views/Example/listAllBuckets.cshtml
@@ -3,7 +3,7 @@
 @foreach (BucketModel bucket in @Model.Buckets)
 {
     <p>Bucket ID : @bucket.id</p>
-    <p>Bucket ID : @bucket.desc</p>
+    <p>Bucket Description : @bucket.desc</p>
 } 
 
 
